--- a/ISkills/ISkillsApp/ISkillsApp.csproj
+++ b/ISkills/ISkillsApp/ISkillsApp.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApiStartup.cs" />
   </ItemGroup>
